# rust-demo-repo

c-in-rust/: Cargo.toml  build.rs
c-in-rust/src/: cuda_foo.rs  main.rs
c-in-rust/src/cuda_foo/: foo.c  foo.cu  foo.h
rust-cube/: Cargo.toml
rust-cube/src/: main.rs
rust-dict/: Cargo.toml
rust-dict/src/: main.rs
rust-in-c/: CMakeLists.txt
rust-in-c/rust-foo/: CMakeLists.txt  Cargo.toml  build.rs
rust-in-c/rust-foo/src/: lib.rs
rust-in-c/src/: foo.c
